--- a/Khet2.0/GDW2 FILES/GDW2 FILES.vcxproj
+++ b/Khet2.0/GDW2 FILES/GDW2 FILES.vcxproj
@@ -118,11 +118,13 @@
   <ItemGroup>
     <ClInclude Include="ConsoleManager.h" />
     <ClInclude Include="InputManager.h" />
+    <ClInclude Include="Laser.h" />
     <ClInclude Include="Pieces.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleManager.cpp" />
     <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="Laser.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Pieces.cpp" />
   </ItemGroup>
