--- a/Khet2.0/GDW2 FILES/GDW2 FILES.vcxproj
+++ b/Khet2.0/GDW2 FILES/GDW2 FILES.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="ConsoleManager.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Laser.cpp" />
+    <ClCompile Include="Logic.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Pieces.cpp" />
   </ItemGroup>
