Movement.cpp Added.
Tavis's chunk

--- a/Khet2.0/GDW2 FILES/GDW2 FILES.vcxproj
+++ b/Khet2.0/GDW2 FILES/GDW2 FILES.vcxproj
@@ -129,6 +129,7 @@
     <ClCompile Include="Laser.cpp" />
     <ClCompile Include="Logic.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Movement.cpp" />
     <ClCompile Include="Pieces.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
