--- a/Khet2.0/GDW2 FILES/GDW2 FILES.vcxproj.filters
+++ b/Khet2.0/GDW2 FILES/GDW2 FILES.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClCompile Include="button.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Movement.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
